# procedura

./: .gitignore  Makefile  README.md  pyproject.toml  test_error_logging.py
docs/: observability.md  project_guide.md
procedura_sdk/: __init__.py  cli.py  metrics.py  metrics_schema.json  remote_agent.py
procedura_sdk/modules/: init_character.py
stack-main/modules/: WorldLattice.py
tools/: events_dump.py  inspect_state.py
