[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "procedura-sdk"
version = "0.1.0"
description = "Beginner-friendly Python SDK and CLI for driving Procedura agents over WebSocket/WSS"
authors = [{ name = "Procedura Corp" }]
requires-python = ">=3.10"
dependencies = ["websockets>=12.0"]
readme = "README.md"

[project.scripts]
procedura = "procedura_sdk.cli:main"

# 👇 Find packages starting at the repo root
[tool.setuptools.packages.find]
where = ["."]
include = ["procedura_sdk*"]

